# Digital-Courtroom

./: .gitignore  Dockerfile  README.md  env.example  pyproject.toml
.github/workflows/: ci.yml
audit/report_bypeer_generated/: audit_report_20260301_022230.md  audit_report_20260301_033531.md
audit/report_onself_generated/: audit_report_20260228_193547.md  audit_report_20260301_020155.md  audit_report_20260301_055031.md
rubric/: rubric.json
scripts/: run_audit.py
src/: graph.py  llm_factory.py  state.py
src/nodes/: context_builder.py  detectives.py  evidence_aggregator.py  judges.py  justice.py
src/prompts/: defense.txt  prosecutor.txt  tech_lead.txt
src/tools/: ast_parser.py  docs_tools.py  prompt_loader.py  repo_tools.py  vision_tools.py
tests/: test_ast_parser.py  test_context_builder.py  test_detectives.py  test_docs_tools.py  test_evidence_aggregator.py  test_judges.py  test_justice.py  test_prompt_loader.py  test_repo_tools.py  test_vision_tools.py
