[project]
name = "digitalcourtroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.74.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.9",
    "langsmith>=0.7.6",
    "openai>=2.22.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tree-sitter>=0.25.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
