[project]
name = "digitalcourtroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "docling>=2.74.0",
    "langchain-google-genai>=4.2.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.9",
    "langsmith>=0.7.6",
    "langchain-openai>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "sentence-transformers>=2.2.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tree-sitter>=0.25.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
